@@ -1,0 +1,4 @@
+#!/bin/bash
+
+./test_filenames webm
+
