@@ -54,6 +54,11 @@ then
     # ogg
     check_filesize "obama" 66181
     check_filesize "raven" 141211
+elif [ "${DESTTYPE}" == "webm" ];
+then
+    # webm
+    check_filesize "obama" 87441
+    check_filesize "raven" 131822
 else
 echo "Internal error, unknown type ${DESTTYPE}. Fix script!"
 exit 99
